portal-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-frontend
  template:
    metadata:
      labels:
        app: portal-frontend
    spec:
      containers:
        - name: portal-frontend
          image: ghcr.io/kstacks-org/portal-frontend:master-8f79e3e
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          # Nitro servers usually respond with 200 on the root path
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
