portal-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-frontend-service
spec:
  selector:
    app: portal-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
