portal-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: kstacks.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-frontend-service
                port:
                  number: 80
  tls:
    - hosts:
        - kstacks.org
      secretName: portal-frontend-tls
