portal-frontend/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-route
  namespace: default
spec:
  parentRefs:
    - name: kstacks-gateway
  hostnames:
    - "kstacks.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: compress
      backendRefs:
        - name: portal-frontend-service
          port: 80
